// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testTSFile compatible 1`] = `
"import {
  computed,
  PropType,
  reactive,
  toRefs,
  ref,
  onBeforeUnmount,
  onUnmounted,
  watch,
  onMounted,
  defineComponent,
} from \\"@vue/composition-api\\";
import { useStore } from \\"vuex\\";
/**
 * My basic tag
 */
export default defineComponent({
  model: {
    prop: \\"checked\\",
    event: \\"change\\",
  },
  props: {
    bar: String,
    checked: { type: Boolean },
    /**
     * My foo
     */
    foo: { type: Boolean, default: false },
    bar: { type: Number as PropType<number>, default: 1 },
    foobar: { type: Object as PropType<CustomType> },
    noType: {},
    stringType: { type: String },
    booleanType: { type: Boolean },
    numberType: { type: Number },
    stringLiteralType: { type: String as PropType<\\"foo\\"> },
    numericLiteral: { type: Number as PropType<2> },
    booleanLiteral: { type: Boolean as PropType<true> },
    /* TODO: Too complex to determine primitive type: true | \\"false\\" */ complexType:
      {},
    /* TODO: Too complex to determine primitive type: string[] */ complexType2:
      {},
  },
  name: \\"oao\\",
  setup(props, context) {
    const store = useStore();
    /**
     * My count
     */
    const count = computed(() => {
      return /* TODO: Check this convert result, it can work well in 80% of cases.*/ context
        .root.$store.state.count;
    });
    const { a } = (() => {
      const a = \\"pa\\";
      return toRefs(
        reactive({
          a: a,
        })
      );
    })();
    const anotherComponent = ref<HTMLElement>(null);
    /* TODO: check function dispatch call signature is correct*/ const actA =
      async (arg: unknown): Promise<unknown> => {
        return await store.dispatch(\\"actA\\", arg);
      };
    /* TODO: check function dispatch call signature is correct*/ const actD =
      async (arg: unknown): Promise<unknown> => {
        return await store.dispatch(\\"namespace/actD\\", arg);
      };
    const actE = async (val: \\"foo\\" | \\"bar\\"): Promise<number> => {
      return await store.dispatch(\\"namespace/actE\\", val);
    };
    const actuhGee = async (val: \\"foo\\" | \\"bar\\"): Promise<number> => {
      return await store.dispatch(actG, val);
    };
    const actH = async (): Promise<number> => {
      return await store.dispatch(\\"actH\\");
    };
    /* TODO: check function dispatch call signature is correct*/ const mutateA =
      (arg: unknown): unknown => {
        return store.commit(\\"mutateA\\", arg);
      };
    /* TODO: check function dispatch call signature is correct*/ const mutateB =
      (arg: unknown): unknown => {
        return store.commit(\\"namespace/mutateB\\", arg);
      };
    const mutateE = (val: \\"foo\\" | \\"bar\\"): number => {
      return store.commit(\\"namespace/mutateE\\", val);
    };
    const mGee = (val: \\"foo\\" | \\"bar\\"): number => {
      return store.commit(mutateG, val);
    };
    const mutateH = (): number => {
      return store.commit(\\"mutateH\\");
    };
    const getA = computed(() => {
      return store.getters.getA;
    });
    const getB = computed<number>(() => {
      return store.getters.getB;
    });
    const getTheC = computed(() => {
      return store.getters[\\"namespace/getC\\"];
    });
    const getTheG = computed<number>(() => {
      return store.getters.cGetG;
    });
    const stateA = computed(() => {
      return store.state.stateA;
    });
    const stateB = computed<number>(() => {
      return store.state.stateB;
    });
    const getStateC = computed<Foo>(() => {
      return store.state[\\"namespace/StateC\\"];
    });
    const stateD = computed<boolean>(() => {
      return store.state[ns.keys.stateD];
    });
    /* TODO: Check for potential naming collisions from $refs conversion*/ const myDiv =
      ref<HTMLDivElement>(null);
    /* TODO: Check for potential naming collisions from $refs conversion*/ const mySpan =
      ref(null);
    /* TODO: Check for potential naming collisions from $refs conversion*/ const myComponent =
      ref<MyComponent>(null);
    /**
     * My msg
     */
    const msg = ref('Vetur means \\"Winter\\" in icelandic.'); // foo
    onBeforeUnmount(() => {
      context.emit(\\"tearing down\\");
    });
    onUnmounted(() => {
      console.log(\\"destroyed\\");
    });
    const click = (c: string) => {
      context.emit(\\"click\\", c);
    };
    const refAccess = () => {
      const foo = { myDiv: true };
      foo.myDiv = false; // should not transform
      myDiv.value!.focus();
      mySpan.value!.innerText = \\"foo\\";
      myComponent.value!.vm.doSomething();
    };
    const value = computed({
      get: () => {
        return props.checked;
      },
      set: (value: boolean) => {
        context.emit(\\"change\\", value);
      },
    });
    watch(
      props.checked,
      (val: boolean, newVal: boolean) => {
        console.log(val, newVal);
        console.log(anotherComponent.value!);
      },
      { deep: true, immediate: true }
    );
    watch(
      msg.value,
      (val: string, newVal: string) => {
        console.log(val, newVal);
      },
      {}
    );
    onMounted(() => {
      click(\\"oao\\");
    });
    const removeItem = () => {
      if (props.foo > 10) {
        context.emit(\\"remove-item\\", 10);
      } else {
        context.emit(\\"remove-item\\", props.foo);
      }
    };
    /**
     * My greeting
     */
    const hello = () => {
      console.log(msg.value);
    };
    removeItem();
    // TODO: Please remove unused return variable
    return {
      count,
      a,
      anotherComponent,
      actA,
      actD,
      actE,
      actuhGee,
      actH,
      mutateA,
      mutateB,
      mutateE,
      mGee,
      mutateH,
      getA,
      getB,
      getTheC,
      getTheG,
      stateA,
      stateB,
      getStateC,
      stateD,
      myDiv,
      mySpan,
      myComponent,
      msg,
      onBeforeUnmount,
      onUnmounted,
      click,
      refAccess,
      value,
      checked,
      msg,
      onMounted,
      removeItem,
      hello,
    };
  },
});
"
`;

exports[`testTSFile compatible and ts config file: stderr 1`] = `""`;

exports[`testTSFile compatible and ts config file: stdout 1`] = `
"import {
  computed,
  PropType,
  reactive,
  toRefs,
  ref,
  onBeforeUnmount,
  onUnmounted,
  watch,
  onMounted,
  defineComponent,
} from \\"@vue/composition-api\\";
import { useStore } from \\"vuex\\";
/**
 * My basic tag
 */
export default defineComponent({
  model: {
    prop: \\"checked\\",
    event: \\"change\\",
  },
  props: {
    bar: String,
    checked: { type: Boolean },
    /**
     * My foo
     */
    foo: { type: Boolean, default: false },
    bar: { type: Number as PropType<number>, default: 1 },
    foobar: { type: Object as PropType<CustomType> },
    noType: {},
    stringType: { type: String },
    booleanType: { type: Boolean },
    numberType: { type: Number },
    stringLiteralType: { type: String as PropType<\\"foo\\"> },
    numericLiteral: { type: Number as PropType<2> },
    booleanLiteral: { type: Boolean as PropType<true> },
    /* TODO: Too complex to determine primitive type: true | \\"false\\" */ complexType:
      {},
    /* TODO: Too complex to determine primitive type: string[] */ complexType2:
      {},
  },
  name: \\"oao\\",
  setup(props, ctx) {
    const store = useStore();
    /**
     * My count
     */
    const count = computed(() => {
      return /* TODO: Check this convert result, it can work well in 80% of cases.*/ ctx
        .root.$store.state.count;
    });
    const { a } = (() => {
      const a = \\"pa\\";
      return toRefs(
        reactive({
          a: a,
        })
      );
    })();
    const anotherComponent = ref<HTMLElement>(null);
    /* TODO: check function dispatch call signature is correct*/ const actA =
      async (arg: unknown): Promise<unknown> => {
        return await store.dispatch(\\"actA\\", arg);
      };
    /* TODO: check function dispatch call signature is correct*/ const actD =
      async (arg: unknown): Promise<unknown> => {
        return await store.dispatch(\\"namespace/actD\\", arg);
      };
    const actE = async (val: \\"foo\\" | \\"bar\\"): Promise<number> => {
      return await store.dispatch(\\"namespace/actE\\", val);
    };
    const actuhGee = async (val: \\"foo\\" | \\"bar\\"): Promise<number> => {
      return await store.dispatch(actG, val);
    };
    const actH = async (): Promise<number> => {
      return await store.dispatch(\\"actH\\");
    };
    /* TODO: check function dispatch call signature is correct*/ const mutateA =
      (arg: unknown): unknown => {
        return store.commit(\\"mutateA\\", arg);
      };
    /* TODO: check function dispatch call signature is correct*/ const mutateB =
      (arg: unknown): unknown => {
        return store.commit(\\"namespace/mutateB\\", arg);
      };
    const mutateE = (val: \\"foo\\" | \\"bar\\"): number => {
      return store.commit(\\"namespace/mutateE\\", val);
    };
    const mGee = (val: \\"foo\\" | \\"bar\\"): number => {
      return store.commit(mutateG, val);
    };
    const mutateH = (): number => {
      return store.commit(\\"mutateH\\");
    };
    const getA = computed(() => {
      return store.getters.getA;
    });
    const getB = computed<number>(() => {
      return store.getters.getB;
    });
    const getTheC = computed(() => {
      return store.getters[\\"namespace/getC\\"];
    });
    const getTheG = computed<number>(() => {
      return store.getters.cGetG;
    });
    const stateA = computed(() => {
      return store.state.stateA;
    });
    const stateB = computed<number>(() => {
      return store.state.stateB;
    });
    const getStateC = computed<Foo>(() => {
      return store.state[\\"namespace/StateC\\"];
    });
    const stateD = computed<boolean>(() => {
      return store.state[ns.keys.stateD];
    });
    /* TODO: Check for potential naming collisions from $refs conversion*/ const myDiv =
      ref<HTMLDivElement>(null);
    /* TODO: Check for potential naming collisions from $refs conversion*/ const mySpan =
      ref(null);
    /* TODO: Check for potential naming collisions from $refs conversion*/ const myComponent =
      ref<MyComponent>(null);
    /**
     * My msg
     */
    const msg = ref('Vetur means \\"Winter\\" in icelandic.'); // foo
    onBeforeUnmount(() => {
      ctx.emit(\\"tearing down\\");
    });
    onUnmounted(() => {
      console.log(\\"destroyed\\");
    });
    const click = (c: string) => {
      context.emit(\\"click\\", c);
    };
    const refAccess = () => {
      const foo = { myDiv: true };
      foo.myDiv = false; // should not transform
      myDiv.value!.focus();
      mySpan.value!.innerText = \\"foo\\";
      myComponent.value!.vm.doSomething();
    };
    const value = computed({
      get: () => {
        return props.checked;
      },
      set: (value: boolean) => {
        ctx.emit(\\"change\\", value);
      },
    });
    watch(
      props.checked,
      (val: boolean, newVal: boolean) => {
        console.log(val, newVal);
        console.log(anotherComponent.value!);
      },
      { deep: true, immediate: true }
    );
    watch(
      msg.value,
      (val: string, newVal: string) => {
        console.log(val, newVal);
      },
      {}
    );
    onMounted(() => {
      click(\\"oao\\");
    });
    const removeItem = () => {
      if (props.foo > 10) {
        context.emit(\\"remove-item\\", 10);
      } else {
        context.emit(\\"remove-item\\", props.foo);
      }
    };
    /**
     * My greeting
     */
    const hello = () => {
      console.log(msg.value);
    };
    removeItem();
    // TODO: Please remove unused return variable
    return {
      count,
      a,
      anotherComponent,
      actA,
      actD,
      actE,
      actuhGee,
      actH,
      mutateA,
      mutateB,
      mutateE,
      mGee,
      mutateH,
      getA,
      getB,
      getTheC,
      getTheG,
      stateA,
      stateB,
      getStateC,
      stateD,
      myDiv,
      mySpan,
      myComponent,
      msg,
      onBeforeUnmount,
      onUnmounted,
      click,
      refAccess,
      value,
      checked,
      msg,
      onMounted,
      removeItem,
      hello,
    };
  },
});

"
`;

exports[`testTSFile no compatible 1`] = `
"import {
  defineComponent,
  computed,
  PropType,
  reactive,
  toRefs,
  ref,
  onBeforeUnmount,
  onUnmounted,
  watch,
  onMounted,
} from \\"vue\\";
import { useStore } from \\"vuex\\";
/**
 * My basic tag
 */
export default defineComponent({
  model: {
    prop: \\"checked\\",
    event: \\"change\\",
  },
  props: {
    bar: String,
    checked: { type: Boolean },
    /**
     * My foo
     */
    foo: { type: Boolean, default: false },
    bar: { type: Number as PropType<number>, default: 1 },
    foobar: { type: Object as PropType<CustomType> },
    noType: {},
    stringType: { type: String },
    booleanType: { type: Boolean },
    numberType: { type: Number },
    stringLiteralType: { type: String as PropType<\\"foo\\"> },
    numericLiteral: { type: Number as PropType<2> },
    booleanLiteral: { type: Boolean as PropType<true> },
    /* TODO: Too complex to determine primitive type: true | \\"false\\" */ complexType:
      {},
    /* TODO: Too complex to determine primitive type: string[] */ complexType2:
      {},
  },
  name: \\"oao\\",
  setup(props, context) {
    const store = useStore();
    /**
     * My count
     */
    const count = computed(() => {
      return /* TODO: Check this convert result, it can work well in 80% of cases.*/ context
        .root.$store.state.count;
    });
    const { a } = (() => {
      const a = \\"pa\\";
      return toRefs(
        reactive({
          a: a,
        })
      );
    })();
    const anotherComponent = ref<HTMLElement>(null);
    /* TODO: check function dispatch call signature is correct*/ const actA =
      async (arg: unknown): Promise<unknown> => {
        return await store.dispatch(\\"actA\\", arg);
      };
    /* TODO: check function dispatch call signature is correct*/ const actD =
      async (arg: unknown): Promise<unknown> => {
        return await store.dispatch(\\"namespace/actD\\", arg);
      };
    const actE = async (val: \\"foo\\" | \\"bar\\"): Promise<number> => {
      return await store.dispatch(\\"namespace/actE\\", val);
    };
    const actuhGee = async (val: \\"foo\\" | \\"bar\\"): Promise<number> => {
      return await store.dispatch(actG, val);
    };
    const actH = async (): Promise<number> => {
      return await store.dispatch(\\"actH\\");
    };
    /* TODO: check function dispatch call signature is correct*/ const mutateA =
      (arg: unknown): unknown => {
        return store.commit(\\"mutateA\\", arg);
      };
    /* TODO: check function dispatch call signature is correct*/ const mutateB =
      (arg: unknown): unknown => {
        return store.commit(\\"namespace/mutateB\\", arg);
      };
    const mutateE = (val: \\"foo\\" | \\"bar\\"): number => {
      return store.commit(\\"namespace/mutateE\\", val);
    };
    const mGee = (val: \\"foo\\" | \\"bar\\"): number => {
      return store.commit(mutateG, val);
    };
    const mutateH = (): number => {
      return store.commit(\\"mutateH\\");
    };
    const getA = computed(() => {
      return store.getters.getA;
    });
    const getB = computed<number>(() => {
      return store.getters.getB;
    });
    const getTheC = computed(() => {
      return store.getters[\\"namespace/getC\\"];
    });
    const getTheG = computed<number>(() => {
      return store.getters.cGetG;
    });
    const stateA = computed(() => {
      return store.state.stateA;
    });
    const stateB = computed<number>(() => {
      return store.state.stateB;
    });
    const getStateC = computed<Foo>(() => {
      return store.state[\\"namespace/StateC\\"];
    });
    const stateD = computed<boolean>(() => {
      return store.state[ns.keys.stateD];
    });
    /* TODO: Check for potential naming collisions from $refs conversion*/ const myDiv =
      ref<HTMLDivElement>(null);
    /* TODO: Check for potential naming collisions from $refs conversion*/ const mySpan =
      ref(null);
    /* TODO: Check for potential naming collisions from $refs conversion*/ const myComponent =
      ref<MyComponent>(null);
    /**
     * My msg
     */
    const msg = ref('Vetur means \\"Winter\\" in icelandic.'); // foo
    onBeforeUnmount(() => {
      context.emit(\\"tearing down\\");
    });
    onUnmounted(() => {
      console.log(\\"destroyed\\");
    });
    const click = (c: string) => {
      context.emit(\\"click\\", c);
    };
    const refAccess = () => {
      const foo = { myDiv: true };
      foo.myDiv = false; // should not transform
      myDiv.value!.focus();
      mySpan.value!.innerText = \\"foo\\";
      myComponent.value!.vm.doSomething();
    };
    const value = computed({
      get: () => {
        return props.checked;
      },
      set: (value: boolean) => {
        context.emit(\\"change\\", value);
      },
    });
    watch(
      props.checked,
      (val: boolean, newVal: boolean) => {
        console.log(val, newVal);
        console.log(anotherComponent.value!);
      },
      { deep: true, immediate: true }
    );
    watch(
      msg.value,
      (val: string, newVal: string) => {
        console.log(val, newVal);
      },
      {}
    );
    onMounted(() => {
      click(\\"oao\\");
    });
    const removeItem = () => {
      if (props.foo > 10) {
        context.emit(\\"remove-item\\", 10);
      } else {
        context.emit(\\"remove-item\\", props.foo);
      }
    };
    /**
     * My greeting
     */
    const hello = () => {
      console.log(msg.value);
    };
    removeItem();
    // TODO: Please remove unused return variable
    return {
      count,
      a,
      anotherComponent,
      actA,
      actD,
      actE,
      actuhGee,
      actH,
      mutateA,
      mutateB,
      mutateE,
      mGee,
      mutateH,
      getA,
      getB,
      getTheC,
      getTheG,
      stateA,
      stateB,
      getStateC,
      stateD,
      myDiv,
      mySpan,
      myComponent,
      msg,
      onBeforeUnmount,
      onUnmounted,
      click,
      refAccess,
      value,
      checked,
      msg,
      onMounted,
      removeItem,
      hello,
    };
  },
});
"
`;
